Changing name on package.json and typo in readme.

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "xml",
     "svg"
   ],
-  "author": "Ítalo Lima",
+  "author": "Ítalo Bechepeche",
   "license": "LGPL",
   "devDependencies": {
     "chai": "^4.3.4",
